Avances y correciones