@@ -42,17 +42,17 @@ public abstract class PersonaDTO {
     }
 
     public void setNombre(String nombre) {
-        checarNombre(nombre);
+        verificarNombre(nombre);
         this.nombre = nombre;
     }
 
     public void setApellidoPaterno(String apellidoPaterno) {
-        checarApellido(apellidoPaterno);
+        verificarApellido(apellidoPaterno);
         this.apellidoPaterno = apellidoPaterno;
     }
 
     public void setApellidoMaterno(String apellidoMaterno) {
-        checarApellido(apellidoMaterno);
+        verificarApellido(apellidoMaterno);
         this.apellidoMaterno = apellidoMaterno;
     }
 
@@ -64,8 +64,11 @@ public abstract class PersonaDTO {
         this.idUniversidad = idUniversidad;
     }
 
-    private void checarNombre (String nombre) {
-        String nombreRegex = "^[A-Za-záéíóúÁÉÍÓÚñÑ][A-Za-záéíóúÁÉÍÓÚñÑ\\\\s]{0,48}[A-Za-záéíóúÁÉÍÓÚñÑ]$";
+    private void verificarNombre (String nombre) {
+        if (!esCadenaValida(nombre)) {
+            throw new ErrorDAO("El nombre no puede estar vacío o compuesto solo de espacios en blanco", ErrorDAO.Tipo.VALIDACION);
+        }
+        String nombreRegex = "^.{1,20}$";
         Pattern patron = Pattern.compile(nombreRegex);
         if (nombre == null || nombre.isEmpty()) {
             throw new ErrorDAO("El nombre no puede estar vacío", ErrorDAO.Tipo.VALIDACION);
@@ -74,14 +77,14 @@ public abstract class PersonaDTO {
         if (!matcher.matches()) {
             throw new ErrorDAO("""
                                                        El nombre no es válido
-                                                       1. Solo debe tener letras.
-                                                       2. No debe tener espacios.
-                                                       3. Para esta versión, solo puede tener caracteres permitidos en el español.
-                                                       4. Su longitud debe ser máximo 20 caracteres.""", ErrorDAO.Tipo.VALIDACION);
+                                                       1. Su longitud debe ser máximo 20 caracteres.""", ErrorDAO.Tipo.VALIDACION);
         }
     }
-    private void checarApellido (String apellido) {
-        String apellidosRegex = "^[A-Za-záéíóúÁÉÍÓÚñÑ][A-Za-záéíóúÁÉÍÓÚñÑ\\s]*[A-Za-záéíóúÁÉÍÓÚñÑ]$";
+    private void verificarApellido (String apellido) {
+        if (!esCadenaValida(apellido)) {
+            throw new ErrorDAO("El nombre no puede estar vacío o compuesto solo de espacios en blanco", ErrorDAO.Tipo.VALIDACION);
+        }
+        String apellidosRegex = "^.{1,20}$";
         Pattern patron = Pattern.compile(apellidosRegex);
         if (apellido == null || apellido.isEmpty()) {
             throw new ErrorDAO("Los apellidos no pueden estar vacíos", ErrorDAO.Tipo.VALIDACION);
@@ -90,16 +93,14 @@ public abstract class PersonaDTO {
         if (!matcher.matches()) {
             throw new ErrorDAO("""
                                                        El apellido no es válido
-                                                       1. Solo debe tener letras.
-                                                       2. Para esta versión, solo puede tener caracteres permitodos en el español
-                                                       2. Su longitud debe ser máximo 20 caracteres""", ErrorDAO.Tipo.VALIDACION);
+                                                       1. Su longitud debe ser máximo 20 caracteres""", ErrorDAO.Tipo.VALIDACION);
         }
     }
 
     public abstract boolean validarNulos();
 
-    protected boolean cadenaValida(String cadena) {
-        return cadena != null && !cadena.isBlank();
+    protected boolean esCadenaValida (String cadena) {
+        return cadena != null && !cadena.trim().isEmpty();
     }
 
 }
